# document_explainer

./: .black.toml  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  deploy.yml  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  svc-cloud.yml
.github/workflows/: pre-commit.yml
src/: agent.py  app.py  ingest.py  main.py
